public/styles/room.css
/** @format */

:root {
  --color-text: var(--color-linen);
  --color-link-text: var(--color-linen);
}

.room-container {
  background: url("https://cdn.glitch.com/aa3b905c-b152-45c7-9d6f-45c998461107%2Focean_loop.gif?v=1631414199461")
    no-repeat center fixed;
  background-size: cover;
  overflow: hidden;
  display: grid;
  min-height: 100vh;
  max-height: 100vh;
  min-width: 100vw;
  max-width: 100vw;
  height: 100%;
  width: 100%;
  overflow: hidden;
  row-gap: 1rem;
  grid-template-columns: minmax(0, 1fr);
  grid-template-rows:
    4rem minmax(0, 1fr)
    5rem;
}

.video-container {
  display: flex;
  padding: 1rem;
  align-items: end;
  justify-items: center;
  max-height: calc(100vh - 12rem);
  border-radius: 10px;
}

.video-container .group {
  display: grid;
  max-height: 100%;
  row-gap: 1rem;
  justify-items: center;
  grid-template-columns: minmax(0, 1fr);
  grid-template-rows: minmax(0, 2fr) minmax(0, max-content);
}

.user-container {
  display: flex;
  flex-wrap: nowrap;
  gap: 1rem;
  overflow-x: auto;
  max-width: 100%;
}

.info-container {
  display: grid;
  grid-template-columns: 25% 50% 25%;
  grid-template-rows: minmax(0, 1fr);
  justify-content: space-between;
  padding: 0.5rem;
}

.info-section-left {
  display: grid;
  column-gap: 0.25rem;
  grid-auto-flow: column;
  padding: 0.25rem 1rem;
}

.info-section-middle {
  display: grid;
  column-gap: 0.25rem;
  grid-auto-flow: column;
  padding: 0.25rem 1rem;
  align-items: center;
}

.info-section-right {
  display: grid;
  column-gap: 0.25rem;
  grid-auto-flow: column;
  padding: 0.25rem 1rem;
  justify-content: flex-end;
}

/* ================ Face cams ================== */

#video-chat-room {
  justify-content: center;
}

.user {
  border-radius: 20px;
  min-width: 200px;
  overflow: hidden;
  max-height: 100%;
  position: relative;
  display: inline-block;
}

.user::before {
  content: "";
  padding-top: 75%;
  width: 100%;
  display: block;
}

.user-camera {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  top: 0;
  text-align: center;
  justify-content: center;
  border-radius: 24px;
  background-color: var(--color-jet);
  width: 200px;
  height: 150px;
  position: absolute;

  box-shadow: 0 8px 6px -6px var(--color-jet);
}

.user-name {
  width: 100%;
  max-width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  position: absolute;
  bottom: 0;
  font-size: 10px;
  padding: 0.25rem 1rem;
  color: var(--color-linen);
  background: linear-gradient(0, rgba(0, 0, 0, 1), transparent),
    linear-gradient(
      0,
      rgba(0, 0, 0, 0.75),
      rgba(0, 0, 0, 0.45),
      rgba(0, 0, 0, 0.15),
      transparent,
      transparent
    );
  z-index: 1;
}

.controls-container {
  align-items: center;
  display: grid;
  grid-template-rows: minmax(0, 1fr);
}

@media screen and (min-width: 768px) {
  .video-container {
    align-items: center;
  }
  .user-name {
    font-size: var(--font-size-xs);
  }
}

/* ================ Buttons ================== */

.btn-group {
  display: flex;
  justify-content: center;
}

#btn-group2 {
  justify-content: flex-end;
}

.btn-group button {
  background-color: transparent;
  border: 0;
  margin: 0 0.25rem;
  cursor: pointer;
}

/* Clear floats (clearfix hack) */

.btn-group:after {
  content: "";
  clear: both;
  display: table;
}

#hideCameraButton {
  opacity: 0.6;
  transition: opacity 0.2s ease-in;
}

#playpauseButtonIcon {
  /* height: 90%; */
}

#muteButton {
  opacity: 0.6;
  transition: opacity 0.2s ease-in;
}

#backButton {
  opacity: 0.6;
  transition: opacity 0.2s ease-in;
}

#nextButton {
  opacity: 0.6;
  transition: opacity 0.2s ease-in;
}

#volumeDownButton {
  opacity: 0.6;
  transition: opacity 0.2s ease-in;
}

#volumeUpButton {
  opacity: 0.6;
  transition: opacity 0.2s ease-in;
}

.grow {
  transition: all 0.2s ease-in-out;
}
.grow:hover {
  transform: scale(1.08);
}

#hideCameraButton:hover {
  opacity: 90%;
}

#muteButton:hover {
  opacity: 90%;
}

#backButton:hover {
  opacity: 90%;
}

#nextButton:hover {
  opacity: 90%;
}

#volumeDownButton:hover {
  opacity: 90%;
}

#volumeUpButton:hover {
  opacity: 90%;
}

#playlistButton:hover {
  opacity: 90%;
}

#chatButton:hover {
  opacity: 90%;
}

#heartButton:hover {
  opacity: 90%;
}

/* Keyboard icon */

#keyboardButton {
  background: transparent;
  border-style: none;
}

#keyboardButtonIcon {
  cursor: pointer;
  opacity: 0.6;
  transition: opacity 0.2s ease;
}

#keyboardButtonIcon:hover {
  opacity: 0.9;
}

/* Glowing animation */

#playlistButton {
  animation: glowing 3000ms 12;
}

@keyframes glowing {
  0% {
    /* filter: drop-shadow(0px 0px 1px #fff) */
  }
  50% {
    filter: drop-shadow(0px 0px 1px #fff) drop-shadow(0px 0px 2px #ffb48e);
    /* drop-shadow(0px 0px 3px #FF8647) */
    opacity: 100%;
  }
  100% {
    /* filter: drop-shadow(0px 0px 1px #fff) */
  }
}

/* ================ Footer ================== */

footer {
  background-color: var(--color-jet); /* var(--color-midnight) */
  width: 100%;
  padding: 0.25rem 0.5rem;
}

#footer--content {
  display: grid;
  grid-template-columns: max-content minmax(0, 1fr) max-content;
  align-items: center;
}

.footer-bg {
  max-width: 1440px;
  width: 100%;
  margin: 0 auto;
}

.footer-left {
  padding: 0;
  display: inline-block;
  flex: 1;
}

.footer-middle {
  align-self: center;
}

.footer-right {
  padding: 0;
  display: inline-block;
  flex: 1;
}

.footer-right {
  position: fixed;
  bottom: 5rem;
  right: 1rem;
}
.footer-right button {
  opacity: 1;
  border-radius: 0.5rem;
  background-color: var(--color-opaque-white);
}

.footer-icons {
  margin-left: auto;
  font-size: 1.3rem;
  display: flex;
}

.social {
  margin: 10px;
  display: inline-block;
  height: 36px;
  width: 36px;
  opacity: 0.6;
  vertical-align: bottom;
  margin-top: 8px;
}

.social:hover {
  opacity: 100%;
  transition: opacity 0.2s ease-in;
}

#footer-name {
  font-size: 1.35rem;
  font-weight: var(--weight-title);
}
/* ... */

